# ticketneedle

./: .gitignore  LICENSE  MODEL_CARDS.md  README.md  bench.py  generate.py  pyproject.toml
bench/: __init__.py  client.py  config.py  extract.py  report.py  runner.py  scorer.py
configs/corpora/: large_150.toml  medium_80.toml  small_30.toml
configs/models/: claude-opus-4-7.toml  claude-sonnet-4-6.toml  gemma4-26b-a4b-it-q4_K_M.toml  gemma4-26b-mlx-bf16.toml  gemma4-26b-mxfp8-nostop.toml  gemma4-26b-mxfp8.toml  gemma4-31b-coding-mtp-bf16-nostop.toml  gemma4-31b-coding-mtp-bf16.toml  gemma4-31b-mxfp8-nostop.toml  gemma4-31b-mxfp8.toml  gemma4-e2b-mxfp8.toml  gemma4-e4b-mxfp8.toml  gpt-5.1.toml  llama3.3-70b.toml  qwen3.5-27b-128k.toml  qwen3.5-27b-donnager.toml  qwen3.5-27b-mxfp8-128k.toml  qwen3.5-4b-128k.toml  qwen3.5-4b-mewtwo-32k.toml  qwen3.5-4b-mewtwo.toml  qwen3.5-9b-128k.toml  qwen3.5-9b-donnager.toml  qwen3.6-27b-coding-mxfp8-128k.toml  qwen3.6-27b-mxfp8-128k.toml  qwen3.6-coding-mxfp8.toml
templates/: domains.toml  halluc_clusters.toml  needle_schema.json  personas.toml
ticketneedle/: __init__.py  distribution.py  loader.py  needles.py  ollama_client.py  render.py  types.py  validate.py
tools/: recheck.py  rescore.py  run_26b_alt_quants.sh  run_anthropic_remaining.sh  run_donnager_cross_stack.sh  run_matrix_cloud_medium_large.sh  run_matrix_large_150_size.sh  run_matrix_medium_80.sh  run_matrix_medium_80_size.sh  run_matrix_small_30.sh  run_matrix_small_30_cloud.sh  run_matrix_small_30_size.sh  run_size_nostop_followup.sh  speed_stats.py  stats.py
(+2 files in other folders)
