[project]
name = "ticketneedle"
version = "0.1.0"
description = "Hallucination benchmark for IT operations tickets"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Tobias Hauser" }]
dependencies = [
    "httpx>=0.27",
    "jinja2>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
